--- a/src/auto-ria.html
+++ b/src/auto-ria.html
@@ -111,7 +111,7 @@
 									<div class="swiper-slide">
 										<div class="auto-ria-team__worker">
 											<div class="img-wrap">
-												<img src="img/IMG_0535 2.jpeg" alt="worker-1">
+												<img src="img/IMG_0535 3.jpeg" alt="worker-1">
 											</div>
 											<div class="auto-ria-team__descrp">Леонід - з дитинства в авто, з юності за кермом</div>
 										</div>
@@ -119,7 +119,7 @@
 									<div class="swiper-slide">
 										<div class="auto-ria-team__worker">
 											<div class="img-wrap">
-												<img src="img/IMG_0535 3.jpeg" alt="worker-2">
+												<img src="img/IMG_0535 2.jpeg" alt="worker-2">
 											</div>
 											<div class="auto-ria-team__descrp">Ігор - колишній перекуп, теперешній Хапай-експерт</div>
 										</div>
@@ -187,7 +187,7 @@
 									<div class="swiper-slide">
 										<div class="selection-car-card__info">
 											<div class="img-wrap">
-												<img src="img/reviews-img.jpeg" alt="img-card-1">
+												<img src="img/image 259.jpeg" alt="img-card-1">
 											</div>
 											<div class="selection-car-card__descrp">Опрацюємо запит і врахуємо усі побажання</div>
 										</div>
@@ -195,7 +195,7 @@
 									<div class="swiper-slide">
 										<div class="selection-car-card__info">
 											<div class="img-wrap">
-												<img src="img/reviews-img.jpeg" alt="img-card-2">
+												<img src="img/image 260.jpeg" alt="img-card-2">
 											</div>
 											<div class="selection-car-card__descrp">Підберемо 5 авто, скинемо на вайбер</div>
 										</div>
@@ -203,25 +203,25 @@
 									<div class="swiper-slide">
 										<div class="selection-car-card__info">
 											<div class="img-wrap">
-												<img src="img/IMG_0535 3.jpeg" alt="img-card-3">
+												<img src="img/image 261.jpeg" alt="img-card-3">
 											</div>
-											<div class="selection-car-card__descrp">Підберемо 5 авто, скинемо на вайбер</div>
+											<div class="selection-car-card__descrp">Оглянемо авто самостійно</div>
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="selection-car-card__info">
 											<div class="img-wrap">
-												<img src="img/reviews-img.jpeg" alt="img-card-4">
+												<img src="img/image 262.jpeg" alt="img-card-4">
 											</div>
-											<div class="selection-car-card__descrp">Підберемо 5 авто, скинемо на вайбер</div>
+											<div class="selection-car-card__descrp">А потім разом з тобою на СТО</div>
 										</div>
 									</div>
 									<div class="swiper-slide">
 										<div class="selection-car-card__info">
 											<div class="img-wrap">
-												<img src="img/reviews-img.jpeg" alt="img-card-5">
+												<img src="img/image 263.jpeg" alt="img-card-5">
 											</div>
-											<div class="selection-car-card__descrp">Підберемо 5 авто, скинемо на вайбер</div>
+											<div class="selection-car-card__descrp">Впевнившись, що з авто все ок, оформимо лізинг</div>
 										</div>
 									</div>
 								</div>
@@ -357,7 +357,7 @@
 							<div class="img-wrap">
 								<img src="img/logo-auto-ria.png" alt="logo">
 							</div>
-							<span>знаходяться <a href="##" target="_blank">тут</a></span>
+							<span>знаходяться <a href="https://auto.ria.com/uk/car/used/" target="_blank">тут</a></span>
 						</div>
 					</div>
 				</section>
@@ -379,7 +379,7 @@
 				<section class="comfort-conditions retreat">
 					<div class="container">
 						<div class="wrap">
-							<div class="comfort-conditions__descrp"><span>Тобі підходить?</span><br>Давай оформимо</div>
+							<div class="comfort-conditions__descrp"><span>Не знайшов на AUTO.RIA?</span><br>Подивись, що є у нас</div>
 							<a href="##" target="_blank" class="btn btn-style-2">Католог авто ХАПАЙ</a>
 						</div>
 					</div>
@@ -387,7 +387,7 @@
 				<section id="qa-loop" class="partners">
 					<div class="container">
 						<div class="partners__title">
-							<div class="title">Рекомендуємо переглянути</div>
+							<div class="title">Глянь нові надходження</div>
 							<div class="swiper__buttons">
 								<div class="btn__swiper icon-u_arrow-left btn__swiper-prev"></div>
 								<div class="btn__swiper icon-u_arrow-right btn__swiper-next"></div>
@@ -860,7 +860,7 @@
 								<div class="img-wrap banner-logo">
 									<img src="img/banner-logo-auto-ria.png" alt="logo">
 								</div>
-								<div class="title"><span>Вже обрав авто на AUTO.RIA</span></div>
+								<div class="title"><span>Вже обрав авто на AUTO.RIA? 👉</span></div>
 							</div>
 							<form id="form-check-auto-ria" class="form-check-auto-ria">
 								<div class="user-info">
