--- a/src/auto-ria.html
+++ b/src/auto-ria.html
@@ -857,10 +857,13 @@
 					<div class="container">
 						<div class="auto-ria-bottom__wraper">
 							<div class="auto-ria-bottom__content">
-								<div class="img-wrap banner-logo">
-									<img src="img/banner-logo-auto-ria.png" alt="logo">
+								<!-- <div class="img-wrap banner-logo">
+									<img src="img/emoji.png" alt="emoji">
+								</div> -->
+								<div class="title"><span>Вже обрав авто на AUTO.RIA?</span></div>
+								<div class="img-wrap banner-emoji">
+									<img src="img/emoji.png" alt="emoji">
 								</div>
-								<div class="title"><span>Вже обрав авто на AUTO.RIA? 👉</span></div>
 							</div>
 							<form id="form-check-auto-ria" class="form-check-auto-ria">
 								<div class="user-info">
